# hbr_risk_tracker

./: .gitignore  Cargo.toml  Makefile.toml  README.adoc  README.md  Shuttle.toml  shuttle.toml
api/db/: patients_schema.sql
api/lib/: Cargo.toml  api.http
api/lib/src/: health.rs  lib.rs  patient_repository.rs  patients.rs
api/lib/src/patient_repository/: postgres_patient_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
docs/: backend.adoc
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: components.rs  main.rs  models.rs
front/src/components/: footer.rs  header.rs  patient_card.rs  patient_modal.rs
front/src/models/: patient.rs
shared/: Cargo.toml
shared/src/: models.rs
