[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.19"
wasm-logger = "0.2.0"
shared = { path = "../shared" }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
web-sys = "0.3.64"
serde = { version = "1.0.164", features = ["derive"] }
