[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing="0.1"
shared = { path = "../../shared", features=["backend"] }
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.68"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.0.0"