[package]
name = "hbr-risk-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
actix-web = "4.3.1"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing="0.1"